plugins {
    // Apply the java plugin to add support for Java
    id 'java'

    // Apply the application plugin to add support for building an application
    id 'application'
}

group 'cz.chovanecm.snow'
version '0.2.1-SNAPSHOT'

mainClassName = "cz.chovanecm.snow.ui.cli.CommandLineInterface"

description = "Utility to access ServiceNow scripts and download them."

sourceCompatibility = 1.11
targetCompatibility = 1.11
tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}


repositories {
    jcenter()
}
dependencies {
    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.4'
    compile group: 'com.github.jsonj', name: 'jsonj', version: '0.8'
    compile 'com.google.code.gson:gson:2.8.5'

    compile group: 'commons-cli', name: 'commons-cli', version: '1.2'
    compile "io.reactivex.rxjava2:rxjava:2.1.13"

    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.6'
    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.6'

    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.2.0'
    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.2.0'
    testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.2.0'

    testCompile "org.mockito:mockito-core:2.+"
}


test {
    useJUnitPlatform()
}